# airflow_dag_data_pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  docker-compose.yml  main.py  pyproject.toml
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml
dags/: hello_world_dag.py  weather_wrapper_dag.py
docs/: decisions.md
src/airflow_dag_data_pipeline/: config.py  main.py  weather_client.py
src/airflow_dag_data_pipeline/logger/: __init__.py
tests/: test_dag.py  test_weather_client.py
